# solar-line

./: .gitignore  AGENT_PROMPT.md  CLAUDE.md  DESIGN.md  Dockerfile  README.md  agent-loop.sh  human_directives_history.md
adr/: 000-template.md  001-report-language.md  002-zero-rust-deps.md  003-flat-f64-wasm-api.md  004-two-phase-dialogue.md  005-custom-markdown-renderer.md  006-verdict-policy.md  007-sf-tolerance.md  008-brachistochrone-terminology.md  009-sqrt-scale-orbital-diagrams.md  010-subagent-delegation.md  011-nice-friend-reanalysis.md  012-jst-timestamps.md  013-cdn-libraries.md  014-source-priority.md  015-naming-kousatsu-vs-koushou.md  README.md
crates/solar-line-wasm/: Cargo.toml
crates/solar-line-wasm/src/: lib.rs
cross_validation/: dag_values.json  poliastro_results.json  run.sh  validate.py  validate_dag.py  validate_orekit.py  validate_poliastro.py  validate_supplementary.py  validate_trim_thrust.py
current_tasks/: 001_scaffold_and_ci.md  002_rust_core_types_and_constants.md  003_wasm_bridge.md  004_subtitle_collection_script.md  005_github_pages_report_pipeline.md  006_episode_1_analysis.md  007_interactive_brachistochrone_calculator.md  008_episode_2_analysis.md  009_subtitle_attribution.md  010_japanese_reports.md  011_session_log_pipeline.md  012_report_enrichment.md  013_ep01_reanalysis.md  014_orbital_transfer_diagrams.md  015_episode_3_analysis.md  016_card_text_overflow_fix.md  017_report_structure_improvements.md  018_ep01_dialogue_corrections.md  019_interactive_orbital_animation.md  020_episode_4_analysis.md  023_episode_5_analysis.md  (+618 more)
(+289 files in other folders)
