[package]
name = "solar-line-wasm"
version = "0.1.0"
edition = "2021"
description = "WASM bridge for solar-line-core orbital mechanics"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
solar-line-core = { path = "../solar-line-core" }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"

[dev-dependencies]
wasm-bindgen-test = "0.3"
serde_json = "1"
